Add docs for /users
